# PF-Prototype-Shared

./: COPY-TO-AIRL-README.md  QUICK-COPY-REFERENCE.md  README.md  SUMMARY.md  agentic-01-file-manifest.txt  copy-agentic-01-to-airl.sh
.github/agents/: my-agent.agent.md
1 Architecture/: 0.4 Data Enginner
1 Architecture/0.1 Roles-Raci-Rbac/: VE-RRR-v2.0.0-readme.md  readme.md
1 Architecture/0.1 Solution architects/: readme.md
1 Architecture/0.1 Value-Engineer/: PF-Core_VE_ValueEngineering_Diagram-EntityGraph_v1.0.0 (1).mermaid  VE-PMF-ValueProp-BAIV  VSOM Framework_ CMO Marketing Perspective - Mermai (1).md  VSOM Framework_ Hierarchical Mermaid Diagrams (1).md  VSOM-Framework-Complete-Refactored.md  VSOM_ Vision, Strategy, Objectives, Metrics Framew (1).md  VSOM_ Vision, Strategy, Objectives, Metrics Framew (2).md  readme.md  vsom-marketing-okr-glossary.md  vsom-marketing-okr-implementation-guide.md  vsom-marketing-okr-ontology.json  vsom-marketing-okr-registry-entry.json  vsom-marketing-okr-test-data.json  vsom-marketing-okr-validation-report.md  vsom_cc_module.json  vsom_framework.json  vsom_mermaid_diagram.mermaid  vsom_okr_ontology.json
1 Architecture/0.1.1 PF Manager/: BAIV_PRD_PFC_Integration_v2.0_from_BAIV_Instance_PRD_v1.7.2 (2).md  PF_CORE_BAIV_ARCHITECTURE_DIAGRAMS (1).md  readme.md
1 Architecture/0.1.2 PF Builder/: readme.md
1 Architecture/0.2 Context Engineer/: readme2.md
1 Architecture/0.2 Product Manager/: readme.md
1 Architecture/0.2 Program Manager/: PRD-PF-CORE-TDD-AUDIT-v1.0.docx.md  consolidated_ppm_ontology (2).json  ontology_implementation_guide.md  ppm_document_schema_model (1).json  ppm_ontology_documentation (1).md  ppm_ontology_encoded (2).json  readme.md  self_documenting_ppm_ontology (1).json
1 Architecture/0.3 Process Engineer/: readme.md
1 Architecture/0.4 Data-Engineer/: readme.md
1 Architecture/0.4 Knowledge Engineer/: PF-CORE-ValueEngineering-OKR-Ontology-v3.json  PF-CORE-ValueEngineering-OKR-PRD-v3 (1).docx  readme.md
1 Architecture/0.5 Designer/: readme.md
1 Architecture/0.6 TDD Engineer/: readme.md
1 Architecture/0.7 CI-CD-PaaS Engineer/: readme.md
1 Architecture/0.8 Security Architect/: readm,e.md
1 Architecture/0.9 Governing-Team/: readme.md
1 Architecture/02 Data Architecture/: readme.md
1 Architecture/02.Figma-Designer/: readme.md
1 Architecture/03 Agentic architecture/: readme.md
1 Architecture/05 Dev Team/: readme.md
1 Architecture/Agentic/: readme.md
1 Architecture/Data-Architecture/: readme.md
1 Architecture/Federated/: FEDERATED_DEV_SUMMARY.md  MIGRATION_TO_MULTI_INSTANCE.md  QUICK_START_FEDERATED_DEV_V2.md  executive-summary (3).md  figma-make-claude-agent-sdk-integration (2).md  interactive-visual-guide (1).md  landing-page (1).html  quick-start-implementation-guide (2).md  reademe.md  runtime-agentic-backend-architecture (2).md  visual-architecture-guide (4).md
3-PF-Skills/: INSTALLATION (1).md  PRD_WRITING_SKILL_SUMMARY (1).md  PRD_Writing_Skill_vs_SubAgent_Analysis (4).md  README (29).md  SKILL (1).md  readme.md
4 PF-Instances/: readme.md
4 PF-Instances/PF-Instance-AIR/: readme.md
4 PF-Instances/PF-Instance-BAIV/: BAIV_API_SPECIFICATION.yaml  BAIV_COMPLIANCE_CHECKLIST.md  BAIV_DATABASE_SCHEMA.sql  BAIV_DEPLOYMENT_GUIDE.md  BAIV_MVP_TODO_PLAN_v2.0.md  BAIV_MVP_TODO_PLAN_v2.1.0_IMPLEMENTATION_PLAN.md  BAIV_SECURITY_IMPLEMENTATION.md  PFC-PFI-BAIV_MANIFEST.md  readme.md
Agentic/: readme.md
Agentic/CRM/: crm-readme.md  (+3 more)
Agentic/CRM-Module/: readme.md
CI-CD/: readme.md
CI-CD/pf-cga-agent/: README.md  pyproject.toml
CI-CD/pf-cga-agent/src/pf_cga_agent/: __init__.py  cli.py
CI-CD/pf-cga-agent/src/pf_cga_agent/agents/: __init__.py  conversation.py  orchestrator.py
CI-CD/pf-cga-agent/src/pf_cga_agent/config/: __init__.py  schemas.py  settings.py
CI-CD/pf-cga-agent/src/pf_cga_agent/skills/: __init__.py  base.py
CI-CD/pf-cga-agent/src/pf_cga_agent/skills/baiv/: __init__.py
CI-CD/pf-cga-agent/src/pf_cga_agent/skills/core/: __init__.py  bridge_concept_finder.py  comparative_scorer.py  opportunity_identifier.py  priority_matrix_builder.py  structural_hole_detector.py  threat_analyzer.py
CI-CD/pf-cga-agent/templates/database/: 001_cga_schema.sql
CI-CD/pf-cga-agent/ui/: package.json
CI-CD/pf-cga-agent/ui/app/: page.tsx
CI-CD/pf-cga-agent/ui/components/display/: AnalysisProgress.tsx  AnalysisResults.tsx
CI-CD/pf-cga-agent/ui/components/forms/: AnalysisRequestForm.tsx
CI-CD/pf-cga-agent/ui/types/: analysis.ts
CI-CD/pf-cicd-agent/: .env.example  README.md  pyproject.toml
CI-CD/pf-cicd-agent/docs/: architecture.md  configuration.md  deployment.md  ops-guide.md  tools-reference.md  user-guide.md
CI-CD/pf-cicd-agent/src/pf_cicd_agent/: __init__.py  cli.py
CI-CD/pf-cicd-agent/src/pf_cicd_agent/agents/: __init__.py  conversation.py  orchestrator.py  system_prompt.py
CI-CD/pf-cicd-agent/src/pf_cicd_agent/audit/: __init__.py  decorators.py  models.py  service.py
CI-CD/pf-cicd-agent/src/pf_cicd_agent/config/: __init__.py  inheritance.py  schemas.py  settings.py  validator.py
CI-CD/pf-cicd-agent/src/pf_cicd_agent/templates/: __init__.py  engine.py  loader.py
CI-CD/pf-cicd-agent/src/pf_cicd_agent/tools/: __init__.py  base.py  registry.py
CI-CD/pf-cicd-agent/src/pf_cicd_agent/tools/digitalocean/: __init__.py  bootstrap_droplet.py  client.py  configure_firewall.py  create_dns.py  create_droplet.py
CI-CD/pf-cicd-agent/src/pf_cicd_agent/tools/github/: __init__.py  branch_protection.py  client.py  create_environment.py  create_repo.py  create_workflow.py  set_secret.py
CI-CD/pf-cicd-agent/templates/base/: pf-core.config.yaml
CI-CD/pf-cicd-agent/templates/database/: 001_pf_core_base.sql
CI-CD/pf-cicd-agent/templates/infrastructure/: bootstrap-docker.sh.template  nginx-site.conf.template
CI-CD/pf-cicd-agent/templates/instances/: air.instance.yaml  baiv.instance.yaml  w4m.instance.yaml
CI-CD/pf-cicd-agent/templates/workflows/: ci.yml.template  deploy.yml.template
Ontology-Management/: readme.md
PF-Agents/: readme.md
PF-Skills/: readme.md
(+837 files in other folders)
