[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pf-cga-agent"
version = "1.0.0"
description = "PF-Core Comparative Gap Analysis Agent - SDK-orchestrated gap analysis system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Platform Foundation", email = "dev@platform-foundation.ai" }
]
keywords = ["agent", "claude", "gap-analysis", "ai", "anthropic", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "supabase>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "structlog>=23.2.0",
    "networkx>=3.2.0",
    "jinja2>=3.1.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
]

[project.scripts]
pf-cga = "pf_cga_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pf_cga_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
